--- a/public/css/secretariaDetalleTurnos.css
+++ b/public/css/secretariaDetalleTurnos.css
@@ -61,3 +61,29 @@ a {
 a:hover {
   color: #1d6fa5;
 }
+
+@media (max-width: 600px) {
+  body {
+    padding: 20px 5px;
+  }
+
+  ul.detalle-turno {
+    padding: 20px 10px;
+    max-width: 100%;
+  }
+
+  h1 {
+    font-size: 1.6rem;
+    margin-bottom: 25px;
+  }
+
+  ul.detalle-turno li {
+    font-size: 1rem;
+    padding-bottom: 8px;
+  }
+
+  a {
+    font-size: 1rem;
+    margin-top: 20px;
+  }
+}
