--- a/public/css/adminRead.css
+++ b/public/css/adminRead.css
@@ -25,3 +25,22 @@ table{
 tr, th, td{
     border: 1px solid black;
 }
+
+@media (max-width: 900px) {
+    table {
+        width: 100%;
+    }
+}
+
+@media (max-width: 600px) {
+    form {
+        flex-direction: column;
+        gap: 10px;
+    }
+    table {
+        font-size: 14px;
+    }
+    h1 {
+        font-size: 1.5em;
+    }
+}
