--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -62,3 +62,53 @@
   width: 80px;
   height: 80px;
 }
+
+@media (max-width: 768px) {
+  .footer {
+    width: 100vw;
+    padding: 10px 0;
+  }
+
+  .sectionFooter {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    margin-top: 0;
+    gap: 15px;
+  }
+
+  .articleFooter {
+    align-items: flex-start;
+    width: 100%;
+  }
+
+  .ulFooter {
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+  }
+
+  .logoFooter {
+    width: 60px;
+    height: 60px;
+  }
+}
+
+@media (max-width: 480px) {
+  .footer {
+    padding: 8px 0;
+  }
+
+  .logoFooter {
+    width: 45px;
+    height: 45px;
+  }
+
+  .spanFooter {
+    font-size: 14px;
+  }
+
+  .aLiFooter {
+    font-size: 13px;
+  }
+}
