--- a/public/css/footerRegister.css
+++ b/public/css/footerRegister.css
@@ -60,3 +60,44 @@ a:hover {
     width: 80px;
     height: 80px;
 }
+
+@media (max-width: 900px) {
+    .footer {
+        width: 90vw;
+        flex-direction: column;
+        padding: 10px 0;
+    }
+    .sectionFooter {
+        flex-direction: column;
+        gap: 15px;
+    }
+    .logoFooter {
+        width: 60px;
+        height: 60px;
+    }
+    ul {
+        flex-direction: column;
+        gap: 10px;
+    }
+}
+
+@media (max-width: 600px) {
+    .footer {
+        width: 100vw;
+        padding: 15px 0;
+    }
+    .sectionFooter {
+        margin-top: 0;
+        gap: 10px;
+    }
+    .logoFooter {
+        width: 40px;
+        height: 40px;
+    }
+    .spanFooter {
+        font-size: 14px;
+    }
+    a {
+        font-size: 13px;
+    }
+}
