--- a/public/css/headerPaciente.css
+++ b/public/css/headerPaciente.css
@@ -31,3 +31,41 @@
 .ulHeader li a:hover {
     color: #3498db;
 }
+
+@media (max-width: 768px) {
+    .headerPaciente {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px 10px;
+    }
+
+    .logoHeader {
+        width: 70px;
+        height: 70px;
+    }
+
+    .ulHeader {
+        gap: 2rem;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .ulHeader li a {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 480px) {
+    .headerPaciente {
+        padding: 5px 5px;
+    }
+
+    .logoHeader {
+        width: 50px;
+        height: 50px;
+    }
+
+    .ulHeader {
+        gap: 1rem;
+    }
+}
