--- a/views/admin/adminSecretariaSuccess.pug
+++ b/views/admin/adminSecretariaSuccess.pug
@@ -6,21 +6,23 @@ html
         link(rel="stylesheet", href="/css/styleGeneral1.css")
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
         link(rel="stylesheet", href="/css/adminCreateProfesional.css")
+        link(rel="stylesheet", href="/css/adminRegisterSecretaria.css")
         link(rel="stylesheet", href="/css/login.css")
         link(rel="stylesheet" href="/css/footer.css")
     body
         include ../includes/headerAdmin
-        section.seccionSecre
-            h1 ¡Secretaria creada con éxito!
-            article.articuloRegistro
-                form.formRegistro(action="/auth/registerSecretaria", method="POST")
-                    span.spanRegistro REGISTRAR SECRETARIA
-                    fieldset.emailRegistro
-                        label.lbEmailRegistro(for="registerEmail") Correo electrónico:
-                        input.inputEmailRegistro(type="email", id="registerEmail", name="email", required, placeholder="Correo electrónico")
-                    fieldset.pwRegistro
-                        label.lbPwRegistro(for="registerPassword") Contraseña:
-                        input.inputPwRegistro(type="password", id="registerPassword", name="password", required, placeholder="Contraseña")
-                    button.botonRegistro(type="submit") Registrar secretaria
+        main(class="mainRegistro")
+            h1(class="tituloRegistro") ¡Secretaria creada con éxito!
+            section(class="sectionRegistro")
+                article(class="articleRegistro")
+                    form(action="/auth/registerSecretaria", method="POST" class="formRegistro")
+                        span(class="spanRegistro") REGISTRAR SECRETARIA
+                        fieldset(class="emailRegistro")
+                            label(class="lbEmailRegistro" for="registerEmail") Correo electrónico:
+                            input(class="inputEmailRegistro" type="email" id="registerEmail" name="email" required placeholder="Correo electrónico")
+                        fieldset(class="pwRegistro")
+                            label(class="lbPwRegistro" for="registerPassword") Contraseña:
+                            input(class="inputPwRegistro" type="password" id="registerPassword" name="password" required placeholder="Contraseña")
+                        button(class="botonRegistro" type="submit") Registrar secretaria
         include ../includes/footer
         script(src="/js/logout.js")
