--- a/views/secretaria/secretariaCrearAgenda.pug
+++ b/views/secretaria/secretariaCrearAgenda.pug
@@ -36,6 +36,9 @@ html
         label(for="tiempo_consulta") Duración de cada consulta:
         input(type="time" id="tiempo_consulta" name="tiempo_consulta" value="00:30:00" required)
 
+        label(for="max_sobreturnos") Cantidad máxima de sobreturnos:
+        input(type="number" name="max_sobreturnos" id="max_sobreturnos" min="0" required)
+
         h2 Días de atención
 
         
