--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -15,16 +15,16 @@ html
         if profesionales && profesionales.length
           select(name="profesional_especialidad_id" id="profesional" required)
             option(value="" selected disabled) Selecciona un profesional
-              each profesional in profesionales
-                option(value=profesional.id)= `${profesional.id}  ${profesional.nombre_completo} / ${profesional.especialidad}`
+            each profesional in profesionales
+              option(value=profesional.id)= `${profesional.id}  ${profesional.nombre_completo} / ${profesional.especialidad}`
         else
           p no se encontraron profesionales
         h3 selecciona un paciente
         if pacientes && pacientes.length
           select(name="paciente_id" required)
             option(value="" selected disabled) Selecciona un paciente
-              each paciente in pacientes
-                option(value=paciente.id)= `${paciente.dni} - ${paciente.nombre_completo}`
+            each paciente in pacientes
+              option(value=paciente.id)= `${paciente.dni} - ${paciente.nombre_completo}`
         else
           p no se encontraron pacientes
         label(for="fecha") Selecciona la fecha:
@@ -34,6 +34,7 @@ html
           option(value="" selected disabled) Selecciona un horario
         label(for="detalle_turno") Detalle del turno:
         textarea(name="detalle_turno" id="detalle_turno" rows="4" placeholder="Detalles adicionales del turno" required)
+        input(type="hidden" name="es_sobreturno" id="es_sobreturno" value="0")
         input(type="hidden" name="estado" value="Confirmado")
         label(for="dni_foto") Subí la fotocopia del DNI:
         input(type="file" name="dni_foto" id="dni_foto" accept="image/*" required)
