--- a/views/secretaria/secretariaTurnoSuccess.pug
+++ b/views/secretaria/secretariaTurnoSuccess.pug
@@ -3,13 +3,14 @@ html
   head
     title Secretaria Panel
     link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
+    link(rel="stylesheet" href="/css/secretariaTurnoSuccess.css")
     link(rel="stylesheet" href="/css/footer.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
-  body
+  body(class="secretariaTurnoSuccess")
     include ../includes/headerSecretaria
-    h1 ¡Turno creado exitosamente!
-    a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer") Volver al inicio
-      
+    main(class="mainContent")
+      h1(class="titulo") ¡Turno creado exitosamente!
+      a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer" class="volver") Volver al inicio
 
     include ../includes/footer
 
