cambio en ausencias

--- a/views/secretaria/secretariaCrearAusencia.pug
+++ b/views/secretaria/secretariaCrearAusencia.pug
@@ -12,7 +12,7 @@ html
 
         h2 Registrar Ausencia de Profesional
 
-        form(method="POST" action="/agendas/ausencias/registrar")
+        form(id="form" method="POST" action="/agendas/ausencias/registrar")
             div
                 label(for="profesional_especialidad_id") Profesional:
                 select(name="profesional_especialidad_id" id="profesional_especialidad_id" required)
@@ -29,25 +29,11 @@ html
                 input(type="text" name="fecha_fin" id="fecha_fin", required)
 
             div
-                label(for="hora_inicio") Hora inicio (opcional):
-                select(name="hora_inicio" id="hora_inicio")
-                    option(value="") -- Seleccione --
-
-            div
-                label(for="hora_fin") Hora fin (opcional):
-                select(name="hora_fin" id="hora_fin")
-                    option(value="") -- Seleccione --
-
-            div
                 label(for="tipo") Tipo de ausencia:
                 select(name="tipo")
                     option(value="Vacaciones") Vacaciones
                     option(value="Licencia") Licencia
                     option(value="Otro") Otro
-
-            div
-                label(for="descripcion") Descripción:
-                textarea(name="descripcion")
 
             button(type="submit") Registrar Ausencia
 
@@ -59,7 +45,6 @@ html
                 th Especialidad
                 th Desde
                 th Hasta
-                th Horario
                 th Tipo
                 th
         tbody
@@ -68,12 +53,7 @@ html
                     td #{a.nombre_completo}
                     td #{a.especialidad}
                     td #{new Date(a.fecha_inicio).toLocaleDateString('es-AR')}
-                    td #{new Date(a.fecha_fin).toLocaleDateString('es-AR')}
-                    td 
-                        if !a.hora_inicio && !a.hora_fin
-                            | Todo el día
-                        else
-                            | #{a.hora_inicio} - #{a.hora_fin}
+                    td #{new Date(a.fecha_fin).toLocaleDateString('es-AR')}                
                     td #{a.tipo}
                     td
                         button.btn-eliminar(type="button" data-id=a.id) Eliminar
