--- a/views/admin/adminCreateSuccess.pug
+++ b/views/admin/adminCreateSuccess.pug
@@ -12,7 +12,7 @@ html
         include ../includes/headerAdmin
         main(class="mainAdminCreateSuccess")
             section(class="successContainer")
-                h1(class="successMessage") ¡Médico cargado exitosamente!
+                h1(class="successMessage") #{message}
                 a(href="/admin" class="button") Volver al inicio
         include ../includes/footer
         script(src="/js/logout.js")
