cambio en la busqueda de profesionales y pacientes

--- a/views/secretaria/secretariaCrearListaEspera.pug
+++ b/views/secretaria/secretariaCrearListaEspera.pug
@@ -5,6 +5,7 @@ html
     link(rel="stylesheet" href="/css/secretariaCrearEspera.css")
     link(rel="stylesheet" href="/css/footer.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
+    link(rel="stylesheet" href="/css/autocompletar_estilos.css")
   body(class="bodySecreCrearEspera")
     include ../includes/headerSecretaria
 
@@ -13,25 +14,23 @@ html
 
       form(action="/secretaria/crearEspera" method="POST" class="formCrearEspera")
         label(for="paciente_id") Selecciona un Paciente:
-        if pacientes && pacientes.length
-          select(name="paciente_id" required)
-            option(value="" selected disabled) Selecciona un paciente
-            each paciente in pacientes
-              option(value=paciente.id)= paciente.nombre_completo
-        else
-          p No se encontraron pacientes.
+        .autocompletar_contenedor
+          input(type="text" id="paciente-search" class="autocompletar_input" placeholder="Buscar por nombre o DNI..." autocomplete="off")
+          input(type="hidden" name="paciente_id" id="paciente-id" required)
 
         label(for="profesional_especialidad_id") Selecciona un Profesional:
-        if profesionales && profesionales.length
-          select(name="profesional_especialidad_id" required)
-            option(value="" selected disabled) Selecciona un profesional
-            each profesional in profesionales
-              option(value=profesional.id)= profesional.nombre_completo + ' / ' + profesional.especialidad
-        else
-          p No se encontraron profesionales.
+        .autocompletar_contenedor
+          input(type="text" id="profesional-search" class="autocompletar_input" placeholder="Buscar por apellido o nombre..." autocomplete="off")
+          input(type="hidden" name="profesional_especialidad_id" id="profesional-id" required)
 
         .botones
           button(type="submit") Agregar a Lista de Espera
 
     include ../includes/footer
     script(src="/js/logout.js")
+    script(src="/js/autocompletar_paciente.js")
+    script(src="/js/autocompletar_profesional.js")
+    script.
+      // Inicializar autocompletados
+      const autocompletarPaciente = new AutocompletarPaciente('paciente-search', 'paciente-id');
+      const autocompletarProfesional = new AutocompletarProfesional('profesional-search', 'profesional-id');
