--- a/views/paciente/pacienteTurno.pug
+++ b/views/paciente/pacienteTurno.pug
@@ -5,6 +5,7 @@ html
     link(rel="stylesheet" href="/css/pacienteTurno.css")
     link(rel="stylesheet" href="/css/headerPaciente.css")
     link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="/css/autocompletar_estilos.css")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
   body
     include ../includes/headerPaciente
@@ -12,13 +13,9 @@ html
       h1 ¡Reserva tu turno ahora!
       form(action="/turnos/crearPaciente" method="POST" class="formTurnos" enctype="multipart/form-data") 
         h3 Selecciona un Profesional
-        if profesionales && profesionales.length
-          select(name="profesional_especialidad_id" id="profesional" required)
-            option(value="" selected disabled) Selecciona un profesional
-              each profesional in profesionales
-                option(value=profesional.id)= `${profesional.id}  ${profesional.nombre_completo} / ${profesional.especialidad}`
-        else
-          p no se encontraron profesionales
+        .autocompletar_contenedor
+          input(type="text" id="profesional-search" class="autocompletar_input" placeholder="Buscar por apellido o nombre..." autocomplete="off")
+          input(type="hidden" name="profesional_especialidad_id" id="profesional-id" required)
         input(type="hidden" name="paciente_id" value=idPaciente)
         label(for="fecha") Selecciona la fecha:
         input(type="text" name="fecha" id="fecha" required)
@@ -34,4 +31,8 @@ html
     include ../includes/footer
     script(src="/js/logout.js")
     script(src="/js/horarios.js")
+    script(src="/js/autocompletar_profesional.js")
     script(src="https://cdn.jsdelivr.net/npm/flatpickr")
+    script.
+      // Inicializar autocompletado
+      const autocompletarProfesional = new AutocompletarProfesional('profesional-search', 'profesional-id');
