--- a/views/includes/headerPaciente.pug
+++ b/views/includes/headerPaciente.pug
@@ -4,5 +4,6 @@ header(class="headerPaciente")
         ul(class="ulHeader")
           li: a(href="/pacientes/paciente") Inicio
           li: a(href="/pacientes/turno") Sacar Turnos
+          li: a(href="/pacientes/pacienteHistorialTurnos") Historial de Turnos
           li: a(href="/pacientes/perfil") Datos Personales
           li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
